<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shuaizhang.eventhub.EventsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#FF3F89E7"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:id="@+id/Events"
                android:text="Events"
                >
            </TextView>
            <ImageView
                android:id="@+id/img_event_add"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/add"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp" />
        </RelativeLayout>

        <!-- This recycler view shows Event data to customers-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/event_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

    </LinearLayout>
</FrameLayout>
